# Bastion

./: .gitignore  LOCAL_LLAMA_POST.MD  README.md
docs/: CLAUDE.md  CUDA_SETUP.md
projects/Aurora/: ATLAS_IMPLEMENTATION.md  Cargo.toml  DOCKER.md  Dockerfile  Dockerfile.dockerignore  FONT_ATLAS.md  Makefile  PARITY_ANALYSIS.md  README.md  debug_layout.rs  test.html
projects/Aurora/fixtures/google-homepage/: index.html  styles.css
projects/Aurora/src/: atlas.rs  css.rs  dom.rs  fetch.rs  font.rs  gpu_paint.rs  html.rs  js.rs  js_boa.rs  layout.rs  main.rs  paint.rs  style.rs  window.rs
projects/Aurora/tests/gallery/: gallery.css  gallery.html
projects/Falcon-Bridge/: .gitignore  README.md  manifesto.md
projects/Falcon-Bridge/falcon-bridge/: Cargo.toml  bridge_schema.sql
projects/Falcon-Bridge/falcon-bridge/src/: main.rs  relay.rs  resolver.rs  translator.rs
projects/FalconPub/: README.md
projects/Gisberta/: README.md
projects/Juntos/: README.md
projects/Monarch/: README.md
projects/MonarchOS/: Cargo.toml  LICENSE  Makefile  README.md  RUNNING.md  linker.ld  x86_64-monarch.json
projects/MonarchOS/.cargo/: config.toml
projects/MonarchOS/iso_root/: limine.cfg  limine.conf
projects/MonarchOS/iso_root/boot/: kernel
projects/MonarchOS/src/: boot_info.rs  lib.rs  main.rs  terminal.rs
projects/MonarchOS/src/arch/: mod.rs
projects/MonarchOS/src/arch/x86_64/: gdt.rs  idt.rs  mod.rs  paging.rs
projects/MonarchOS/src/filesystem/: ext2.rs  mod.rs  vfs.rs
projects/MonarchOS/src/io/: console.rs  mod.rs  serial.rs
projects/MonarchOS/src/memory/: allocator.rs  heap.rs  manager.rs  mod.rs
projects/MonarchOS/src/process/: mod.rs  scheduler.rs  task.rs
projects/MonarchOS/src/sync/: mod.rs  semaphore.rs  spinlock.rs
projects/Opus/: Cargo.toml  README.md
projects/Opus/docs/: architecture.md
projects/Opus/src/: crypto.rs  identity.rs  lib.rs
projects/ProjectFalcon/: .dockerignore  Dockerfile  FOUNDING.MD  README.md  cloudbuild-quick.yaml  cloudbuild.yaml  pom.xml  (+2 more)
src/: benchmark_hybrid_attention.py  benchmark_speculative.py  dedup_functions.py  fetch_top_crates.py  train.py
tests/: test_gru_kernels.py  test_hybrid_attention.py  test_kernel_correctness.py
(+97 files in other folders)
