[package]
name = "monarch"
version = "0.1.0"
edition = "2021"

[dependencies]
font8x8 = { version = "0.3.1", default-features = false, features = ["unicode"] }
limine = "0.5"

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"

[profile.dev]
panic = "abort"

[[bin]]
name = "kernel"
path = "src/main.rs"
