[package]
name = "opus"
version = "0.1.0"
edition = "2021"

[lib]
name = "opus"
path = "src/lib.rs"

[dependencies]
hmac = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls-manual-roots"], default-features = false }
rustls = { version = "0.23", features = ["ring"] }
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }

[[bin]]
name = "opus"
path = "src/main.rs"
